Get more detailed response in GetPollutionValueByPosition
