# backend/internal/pollution/model.go
@@ -11,3 +11,9 @@ type Pollution struct {
 	IsAnomaly bool      `json:"is_anomaly"`
 	Pollutant string    `json:"pollutant"`
 }
+
+type PollutionValueResponse struct {
+	Time      time.Time `json:"time"`
+	Value     float64   `json:"value"`
+	Pollutant string    `json:"pollutant"`
+}
